src/snapshots/jj_pr__tests__show_wraps_long_pr_title-3.snap
---
source: src/tests.rs
assertion_line: 1117
expression: "render_show_wrapped(&f, &BTreeMap::new(), false, false, Some(15))"
---
[1m[36m◆[0m  [1m[32mtrunk()[0m
○  [1m[36m]8;;https://github.com/test/repo/pull/1PR #1]8;;[0m  [33mDraft[0m  [1m[35mfeat[0m
│  This is an extremely long pull request title that will definitely exceed the width of a normal terminal window
[2m~[0m  [2m(elided revisions)[0m
