src/snapshots/jj_pr__tests__stacked_prs_sync.snap
---
source: src/tests.rs
expression: plan_sync(&f)
---
update #1 (feat-a) title -> "a"
update #2 (feat-b) title -> "b"
