src/snapshots/jj_pr__tests__stale_trailer_at_branch_tip_show.snap
---
source: src/tests.rs
expression: "render_show(&f, true, false)"
---
○  [1m[36m]8;;https://github.com/test/repo/pull/1PR #1]8;;[0m*  [33mDraft[0m  [1m[35mfeat-a[0m
│  PR #1
○  [1m[36m]8;;https://github.com/test/repo/pull/2PR #2]8;;[0m*  [33mDraft[0m  [1m[35mfeat-b[0m
│  PR #2
[1m[36m◆[0m  [1m[32mtrunk()[0m
[2m~[0m  [2m(elided revisions)[0m
