src/snapshots/jj_pr__tests__stale_trailer_at_branch_tip_sync.snap
---
source: src/tests.rs
expression: plan_sync(&f)
---
stamp #2 trailer on chb1
push: #2 (feat-b), #1 (feat-a)
