src/snapshots/jj_pr__tests__stale_trunk_skips_abandon.snap
---
source: src/tests.rs
expression: plan_sync(&f)
---
skip merged #1 (feat) — trunk stale, run `jj git fetch`
